--- a/archives/toutiao-search/2024-04-18.md
+++ b/archives/toutiao-search/2024-04-18.md
@@ -1,71 +1,83 @@
 # 2024-04-18
 
-共 108 条
+共 112 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Apr 18 2024 06:00:54 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Apr 18 2024 07:00:45 GMT+0800 (China Standard Time) -->
 1. [阿联酋一天下了一年的雨](https://so.toutiao.com/search?keyword=阿联酋一天下了一年的雨)
 1. [亚洲货币贬值潮要来了吗](https://so.toutiao.com/search?keyword=亚洲货币贬值潮要来了吗)
 1. [从三个账本看春耕春管新变化](https://so.toutiao.com/search?keyword=从三个账本看春耕春管新变化)
 1. [投资近2亿大桥围栏大片倒塌](https://so.toutiao.com/search?keyword=投资近2亿大桥围栏大片倒塌)
 1. [美欧将对伊朗实施新制裁](https://so.toutiao.com/search?keyword=美欧将对伊朗实施新制裁)
+1. [网红飞飞一杯酒去世](https://so.toutiao.com/search?keyword=网红飞飞一杯酒去世)
 1. [曝女子在养生馆被丈夫从床上拽下打](https://so.toutiao.com/search?keyword=曝女子在养生馆被丈夫从床上拽下打)
-1. [沈富雄分析赖清德第三波人事布局](https://so.toutiao.com/search?keyword=沈富雄分析赖清德第三波人事布局)
 1. [日本四国岛发生6.2级地震](https://so.toutiao.com/search?keyword=日本四国岛发生6.2级地震)
 1. [燃气公司称换表后费用上涨或是错觉](https://so.toutiao.com/search?keyword=燃气公司称换表后费用上涨或是错觉)
-1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
+1. [媒体：为了两张饼菲律宾把自己卖了](https://so.toutiao.com/search?keyword=媒体：为了两张饼菲律宾把自己卖了)
 1. [小浪底观景台9.9元优惠门票不实](https://so.toutiao.com/search?keyword=小浪底观景台9.9元优惠门票不实)
 1. [驻迪拜总领馆提醒公民关注天气变化](https://so.toutiao.com/search?keyword=驻迪拜总领馆提醒公民关注天气变化)
-1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
-1. [网红飞飞一杯酒去世](https://so.toutiao.com/search?keyword=网红飞飞一杯酒去世)
-1. [企业家称返乡投资6亿遭政府违约](https://so.toutiao.com/search?keyword=企业家称返乡投资6亿遭政府违约)
-1. [茶企老板一家3口遇害 嫌犯系其弟弟](https://so.toutiao.com/search?keyword=茶企老板一家3口遇害+嫌犯系其弟弟)
-1. [媒体：为了两张饼菲律宾把自己卖了](https://so.toutiao.com/search?keyword=媒体：为了两张饼菲律宾把自己卖了)
-1. [德国汽车业希望避免与中国决裂](https://so.toutiao.com/search?keyword=德国汽车业希望避免与中国决裂)
-1. [知名编剧称外出俩月烧500多方燃气](https://so.toutiao.com/search?keyword=知名编剧称外出俩月烧500多方燃气)
-1. [换表新增1.7万欠费？燃气公司回应](https://so.toutiao.com/search?keyword=换表新增1.7万欠费？燃气公司回应)
-1. [以军在汗尤尼斯留下大量未爆弹药](https://so.toutiao.com/search?keyword=以军在汗尤尼斯留下大量未爆弹药)
-1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
-1. [南部战区位中缅边境举行实兵实弹演习](https://so.toutiao.com/search?keyword=南部战区位中缅边境举行实兵实弹演习)
-1. [“提灯定损”村庄的违建会全拆吗](https://so.toutiao.com/search?keyword=“提灯定损”村庄的违建会全拆吗)
-1. [央媒评女子躺座椅致航班延误](https://so.toutiao.com/search?keyword=央媒评女子躺座椅致航班延误)
-1. [调查组进驻重庆燃气集团倒查三年账](https://so.toutiao.com/search?keyword=调查组进驻重庆燃气集团倒查三年账)
-1. [东部战区发言人现新面孔 出自海军](https://so.toutiao.com/search?keyword=东部战区发言人现新面孔+出自海军)
-1. [海湾国家罕见暴雨 多国现严重洪灾](https://so.toutiao.com/search?keyword=海湾国家罕见暴雨+多国现严重洪灾)
-1. [同济学生向德国总理提尖锐问题](https://so.toutiao.com/search?keyword=同济学生向德国总理提尖锐问题)
-1. [4名不满14岁未成年获刑传递啥信号](https://so.toutiao.com/search?keyword=4名不满14岁未成年获刑传递啥信号)
 1. [外媒曝俄乌2022年谈判破裂原因](https://so.toutiao.com/search?keyword=外媒曝俄乌2022年谈判破裂原因)
-1. [警方回应男子用玻璃杯暴打妻子](https://so.toutiao.com/search?keyword=警方回应男子用玻璃杯暴打妻子)
+1. [换表新增1.7万欠费？燃气公司回应](https://so.toutiao.com/search?keyword=换表新增1.7万欠费？燃气公司回应)
+1. [特斯拉万人大裁员轰动美国](https://so.toutiao.com/search?keyword=特斯拉万人大裁员轰动美国)
+1. [茶企老板一家3口遇害 嫌犯系其弟弟](https://so.toutiao.com/search?keyword=茶企老板一家3口遇害+嫌犯系其弟弟)
+1. [企业家称返乡投资6亿遭政府违约](https://so.toutiao.com/search?keyword=企业家称返乡投资6亿遭政府违约)
+1. [泽连斯基：中国可以加速和平进程](https://so.toutiao.com/search?keyword=泽连斯基：中国可以加速和平进程)
+1. [沈富雄分析赖清德第三波人事布局](https://so.toutiao.com/search?keyword=沈富雄分析赖清德第三波人事布局)
+1. [知名编剧称外出俩月烧500多方燃气](https://so.toutiao.com/search?keyword=知名编剧称外出俩月烧500多方燃气)
+1. [美媒：以色列准备多款战机打击伊朗](https://so.toutiao.com/search?keyword=美媒：以色列准备多款战机打击伊朗)
+1. [南部战区位中缅边境举行实兵实弹演习](https://so.toutiao.com/search?keyword=南部战区位中缅边境举行实兵实弹演习)
+1. [博主：国人养娃成本几乎全球最高](https://so.toutiao.com/search?keyword=博主：国人养娃成本几乎全球最高)
+1. [海湾国家罕见暴雨 多国现严重洪灾](https://so.toutiao.com/search?keyword=海湾国家罕见暴雨+多国现严重洪灾)
+1. [农民工白天打工晚上去直播间当大哥](https://so.toutiao.com/search?keyword=农民工白天打工晚上去直播间当大哥)
+1. [36岁女子存300万后提前退休](https://so.toutiao.com/search?keyword=36岁女子存300万后提前退休)
+1. [央媒评女子躺座椅致航班延误](https://so.toutiao.com/search?keyword=央媒评女子躺座椅致航班延误)
+1. [“提灯定损”村庄的违建会全拆吗](https://so.toutiao.com/search?keyword=“提灯定损”村庄的违建会全拆吗)
+1. [李若彤活动现场被人叫“姑姑”](https://so.toutiao.com/search?keyword=李若彤活动现场被人叫“姑姑”)
+1. [巴西女子推老人尸体进银行取贷款](https://so.toutiao.com/search?keyword=巴西女子推老人尸体进银行取贷款)
+1. [女儿哭诉在学校受欺负爸爸霸气回应](https://so.toutiao.com/search?keyword=女儿哭诉在学校受欺负爸爸霸气回应)
+1. [调查组进驻重庆燃气集团倒查三年账](https://so.toutiao.com/search?keyword=调查组进驻重庆燃气集团倒查三年账)
+1. [同济学生向德国总理提尖锐问题](https://so.toutiao.com/search?keyword=同济学生向德国总理提尖锐问题)
+1. [林斌刘向东向中山大学捐赠1亿元](https://so.toutiao.com/search?keyword=林斌刘向东向中山大学捐赠1亿元)
+1. [德国汽车业希望避免与中国决裂](https://so.toutiao.com/search?keyword=德国汽车业希望避免与中国决裂)
+1. [中方回应昂山素季出狱改为在家软禁](https://so.toutiao.com/search?keyword=中方回应昂山素季出狱改为在家软禁)
+1. [企业一年内疑被执法检查超200次](https://so.toutiao.com/search?keyword=企业一年内疑被执法检查超200次)
+1. [老旧小区原拆原建 居民自筹4.7亿](https://so.toutiao.com/search?keyword=老旧小区原拆原建+居民自筹4.7亿)
+1. [《城中之城》赵辉被人举报](https://so.toutiao.com/search?keyword=《城中之城》赵辉被人举报)
+1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
 1. [伊朗报复以色列：加沙人成唯一输家](https://so.toutiao.com/search?keyword=伊朗报复以色列：加沙人成唯一输家)
+1. [月薪5万夫妻裸辞义乌创业日入200元](https://so.toutiao.com/search?keyword=月薪5万夫妻裸辞义乌创业日入200元)
+1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
+1. [东部战区发言人现新面孔 出自海军](https://so.toutiao.com/search?keyword=东部战区发言人现新面孔+出自海军)
+1. [官方回应男子被扣电动车电瓶丢失](https://so.toutiao.com/search?keyword=官方回应男子被扣电动车电瓶丢失)
+1. [外媒评德总理朔尔茨访华](https://so.toutiao.com/search?keyword=外媒评德总理朔尔茨访华)
+1. [主播回应撞脸命案逃犯：已报警](https://so.toutiao.com/search?keyword=主播回应撞脸命案逃犯：已报警)
+1. [停业近1年催收巨头永雄集团宣布转型](https://so.toutiao.com/search?keyword=停业近1年催收巨头永雄集团宣布转型)
+1. [以色列轰炸黎巴嫩南部民众惊慌逃离](https://so.toutiao.com/search?keyword=以色列轰炸黎巴嫩南部民众惊慌逃离)
+1. [老人买一张坐票占三个座自称腰疼](https://so.toutiao.com/search?keyword=老人买一张坐票占三个座自称腰疼)
+1. [以军在汗尤尼斯留下大量未爆弹药](https://so.toutiao.com/search?keyword=以军在汗尤尼斯留下大量未爆弹药)
+1. [4名不满14岁未成年获刑传递啥信号](https://so.toutiao.com/search?keyword=4名不满14岁未成年获刑传递啥信号)
+1. [警方回应男子用玻璃杯暴打妻子](https://so.toutiao.com/search?keyword=警方回应男子用玻璃杯暴打妻子)
 1. [招牌统一的城市营商环境不好？](https://so.toutiao.com/search?keyword=招牌统一的城市营商环境不好？)
 1. [德媒引用《孙子兵法》谈朔尔茨访华](https://so.toutiao.com/search?keyword=德媒引用《孙子兵法》谈朔尔茨访华)
-1. [《城中之城》赵辉被人举报](https://so.toutiao.com/search?keyword=《城中之城》赵辉被人举报)
 1. [“鸿茅药酒事件”当事人卖书求生](https://so.toutiao.com/search?keyword=“鸿茅药酒事件”当事人卖书求生)
 1. [新国九条发布 资本市场将向何方](https://so.toutiao.com/search?keyword=新国九条发布+资本市场将向何方)
 1. [周迅《如懿传》再引争议](https://so.toutiao.com/search?keyword=周迅《如懿传》再引争议)
 1. [被困于法庭的特朗普还能继续参选吗](https://so.toutiao.com/search?keyword=被困于法庭的特朗普还能继续参选吗)
-1. [老人买一张坐票占三个座自称腰疼](https://so.toutiao.com/search?keyword=老人买一张坐票占三个座自称腰疼)
 1. [江西一种植户30多个大棚因大风全毁](https://so.toutiao.com/search?keyword=江西一种植户30多个大棚因大风全毁)
 1. [女子躺座椅上拒不下飞机致航班延误](https://so.toutiao.com/search?keyword=女子躺座椅上拒不下飞机致航班延误)
 1. [网传重庆换水表引网友担忧](https://so.toutiao.com/search?keyword=网传重庆换水表引网友担忧)
-1. [女孩退伍224天后收到部队转账](https://so.toutiao.com/search?keyword=女孩退伍224天后收到部队转账)
 1. [交警检查时看到男子的头盔笑了](https://so.toutiao.com/search?keyword=交警检查时看到男子的头盔笑了)
 1. [曝皇马次回合战曼城将身穿深色球衣](https://so.toutiao.com/search?keyword=曝皇马次回合战曼城将身穿深色球衣)
-1. [36岁女子存300万后提前退休](https://so.toutiao.com/search?keyword=36岁女子存300万后提前退休)
 1. [官方回应石家庄一小区上百居民腹泻](https://so.toutiao.com/search?keyword=官方回应石家庄一小区上百居民腹泻)
 1. [《承欢记》姚志明也是奶奶的遗产](https://so.toutiao.com/search?keyword=《承欢记》姚志明也是奶奶的遗产)
 1. [台名嘴：大陆的导弹奇准无比](https://so.toutiao.com/search?keyword=台名嘴：大陆的导弹奇准无比)
 1. [美反潜巡逻机过航台海 东部战区回应](https://so.toutiao.com/search?keyword=美反潜巡逻机过航台海+东部战区回应)
-1. [外媒评德总理朔尔茨访华](https://so.toutiao.com/search?keyword=外媒评德总理朔尔茨访华)
 1. [专家：伊朗以色列冲突仍在发酵](https://so.toutiao.com/search?keyword=专家：伊朗以色列冲突仍在发酵)
-1. [老旧小区原拆原建 居民自筹4.7亿](https://so.toutiao.com/search?keyword=老旧小区原拆原建+居民自筹4.7亿)
 1. [俄防空机组人员谈摧毁乌无人机经历](https://so.toutiao.com/search?keyword=俄防空机组人员谈摧毁乌无人机经历)
 1. [媒体：伊朗导弹袭击试出美以成色](https://so.toutiao.com/search?keyword=媒体：伊朗导弹袭击试出美以成色)
 1. [小米SU7单周销量登顶](https://so.toutiao.com/search?keyword=小米SU7单周销量登顶)
 1. [乌克兰切尔尼戈夫州遭袭已致13死](https://so.toutiao.com/search?keyword=乌克兰切尔尼戈夫州遭袭已致13死)
-1. [中方回应昂山素季出狱改为在家软禁](https://so.toutiao.com/search?keyword=中方回应昂山素季出狱改为在家软禁)
 1. [赖清德新任经济主管官员有案底](https://so.toutiao.com/search?keyword=赖清德新任经济主管官员有案底)
-1. [评论员谈成都房子1年没住收燃气费](https://so.toutiao.com/search?keyword=评论员谈成都房子1年没住收燃气费)
 1. [极越回应员工买小米SU7被辞退](https://so.toutiao.com/search?keyword=极越回应员工买小米SU7被辞退)
 1. [中美防长视频通话](https://so.toutiao.com/search?keyword=中美防长视频通话)
 1. [福景001船强令他人违章作业案宣判](https://so.toutiao.com/search?keyword=福景001船强令他人违章作业案宣判)
@@ -82,25 +94,17 @@
 1. [湖北版“以旧换新”方案发布](https://so.toutiao.com/search?keyword=湖北版“以旧换新”方案发布)
 1. [中美防长通话 双方新闻稿有何差异](https://so.toutiao.com/search?keyword=中美防长通话+双方新闻稿有何差异)
 1. [中国纸币千年金银纪念币将发行](https://so.toutiao.com/search?keyword=中国纸币千年金银纪念币将发行)
-1. [女儿哭诉在学校受欺负爸爸霸气回应](https://so.toutiao.com/search?keyword=女儿哭诉在学校受欺负爸爸霸气回应)
 1. [男子展现绝技“水中太空步”](https://so.toutiao.com/search?keyword=男子展现绝技“水中太空步”)
-1. [停业近1年催收巨头永雄集团宣布转型](https://so.toutiao.com/search?keyword=停业近1年催收巨头永雄集团宣布转型)
-1. [主播回应撞脸命案逃犯：已报警](https://so.toutiao.com/search?keyword=主播回应撞脸命案逃犯：已报警)
 1. [专家谈伊以局势及俄乌冲突等问题](https://so.toutiao.com/search?keyword=专家谈伊以局势及俄乌冲突等问题)
 1. [两千万人围观了AI刘强东](https://so.toutiao.com/search?keyword=两千万人围观了AI刘强东)
-1. [巴西女子推老人尸体进银行取贷款](https://so.toutiao.com/search?keyword=巴西女子推老人尸体进银行取贷款)
 1. [全国房价比顶峰下降21%](https://so.toutiao.com/search?keyword=全国房价比顶峰下降21%)
 1. [俄军无人机撞向乌军无人机画面曝光](https://so.toutiao.com/search?keyword=俄军无人机撞向乌军无人机画面曝光)
-1. [李若彤活动现场被人叫“姑姑”](https://so.toutiao.com/search?keyword=李若彤活动现场被人叫“姑姑”)
 1. [山东大学全程参与武王墩考古项目](https://so.toutiao.com/search?keyword=山东大学全程参与武王墩考古项目)
 1. [外媒称俄承诺向伊朗提供先进战斗机](https://so.toutiao.com/search?keyword=外媒称俄承诺向伊朗提供先进战斗机)
 1. [美国抗议者焚烧美国国旗](https://so.toutiao.com/search?keyword=美国抗议者焚烧美国国旗)
 1. [儿童牛奶里发现异物](https://so.toutiao.com/search?keyword=儿童牛奶里发现异物)
 1. [“无主”石砖砸伤孕妇到底该谁负责](https://so.toutiao.com/search?keyword=“无主”石砖砸伤孕妇到底该谁负责)
-1. [官方回应男子被扣电动车电瓶丢失](https://so.toutiao.com/search?keyword=官方回应男子被扣电动车电瓶丢失)
-1. [农民工白天打工晚上去直播间当大哥](https://so.toutiao.com/search?keyword=农民工白天打工晚上去直播间当大哥)
 1. [别克GL8推出插混版](https://so.toutiao.com/search?keyword=别克GL8推出插混版)
-1. [博主：国人养娃成本几乎全球最高](https://so.toutiao.com/search?keyword=博主：国人养娃成本几乎全球最高)
 1. [男生师生对话会上向领导“真诚发问”](https://so.toutiao.com/search?keyword=男生师生对话会上向领导“真诚发问”)
 1. [住户多次高空抛物楼下装监控抓元凶](https://so.toutiao.com/search?keyword=住户多次高空抛物楼下装监控抓元凶)
 1. [中方同意解除对德牛肉苹果输华限制](https://so.toutiao.com/search?keyword=中方同意解除对德牛肉苹果输华限制)
